--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,14 @@ body {
 }
 /* Common Styles */
 
-main, .container {
+.container {
   max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.main-sections {
+  max-width: 1100px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -34,6 +40,22 @@ h2 {
   font-size: 52px;
   font-weight: 700;
   line-height: 70px;
+}
+
+h3 {
+  color: var(--base-font-color);
+  font-size: 28px;
+  line-height: 70px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+h4 {
+  color: var(--base-font-color);
+  font-size: 28px;
+  line-height: 40px;
+  font-weight: 500;
+  text-transform: capitalize;
 }
 
 p {
@@ -72,7 +94,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 87px;
+  margin-top: 55px;
 }
 
 .header_menu_logo a {
@@ -139,17 +161,17 @@ p {
 
 .banner-right img {
 	width: 82%;
-  border: 6px solid rgba(18, 18, 18, 0.048);
+  border: 5px solid rgba(18, 18, 18, 0.048);
   border-radius: 50%;
 }
 
 /* Partners Styles */
 
 .partners {
-  margin-top: 55px;
+  margin: 55px 0;
   padding: 20px 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   border: 1px solid;
   border-width: 2px 0;
@@ -158,5 +180,80 @@ p {
 
 .partners-logo img {
   width: 80%;
+  cursor: pointer;
 }
+
+/* Tools Collections Styles */
+
+.tools-collection {
+  padding: 55px 0;
+}
+.tools-collection h3 {
+  text-align: center;
+}
+
+.tool-cards {
+  padding: 30px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 25px;
+}
+
+.tool_card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 15px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.tool_card img {
+  width: 100%;
+}
+
+.tool_card h4 {
+  margin: 16px 0;
+}
+
+.tool_card p {
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 400;
+}
+
+.tool_ratings {
+  margin-top: 16px;
+}
+
+.tool_ratings .fas {
+  color: #FB8200;
+  font-size: 10px;
+}
+
+.tool_ratings ul {
+  display: inline-block;
+  margin-right: 4px;
+}
+
+.tool_ratings li {
+  list-style: none;
+  display: inline-block;
+}
+
+.tools_extra_infos p, .tool_ratings span {
+  color: #787885;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 700;
+}
+
+.tools-btn {
+  text-align: right;
+}
+
 
