--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,12 @@ p {
   display: none;
 }
 
+/* Mobile Menu Cart Styles */
+
+.mobile-menu-cart {
+  display: none;
+}
+
 /* Banner Styles */
 
 .banner {
@@ -335,6 +341,201 @@ p {
 .footer-social-icons li a {
   color: #D9DBE1;
   font-size: 14px;
+}
+
+
+
+/* Mobiles Responsive  CSS*/
+
+@media screen and (max-width:767px) {
+
+  /* Navigation CSS */
+
+  .mobile-menu-cart {
+    display: block;
+  }
+
+  .mobile-menu-cart a {
+    color: #24A19C;
+  }
+
+  .header-menu {
+    flex-direction: row-reverse;
+    margin-top: 20px;
+  }
+  
+  .header_menu_toggler_icon {
+    display: block;
+  }
+
+  .navigation {
+    position: absolute;
+    left: 0;
+    top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #24A19C;
+    padding: 10px 0;
+    transform: translateX(-100%);
+    transition: 0.7s ease-in-out;
+    border-radius: 5px;
+  }
+
+  .navigation li a {
+    color: #D9DBE1;
+  }
+
+  .navigation li:hover a {
+    color: #3A3A3A;
+  }
+
+  #header_menu_toggler:checked ~ .navigation {
+    transform: translateX(0);
+  }
+
+  /* Common CSS */
+
+  .banner,
+   .tool-cards,
+   .contact-area {
+    grid-template-columns: 1fr;
+  }
+
+  /* Banner CSS */
+
+  .banner-left {
+    order: 1;
+    text-align: center;
+  }
+
+  h2 {
+    font-size: 35px;
+    margin-top: 20px;
+  }
+
+  /* Partners CSS */
+  .partners {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border: 0;
+    margin: 20px 0;
+  }
+
+  .partners-logo {
+    width: 22%;
+    padding: 10px 0;
+  }
+
+  /* Tools Collection CSS */
+
+  .tools-collection {
+    padding: 20px 0;
+  }
+
+  /* Contact CSS */
+
+  .contact {
+    margin: 20px 0;
+    padding: 0 15px;
+
+  }
+
+  .contact_form input.primary-btn {
+    width: 45%;
+  }
+
+  .contact-map {
+    order: 1;
+  }
+}
+
+/* Tablets Responsive CSS */
+
+@media screen and (min-width:768px) and (max-width:1024px) {
+
+  /* Navigation CSS */
+  .mobile-menu-cart {
+    display: block;
+  }
+
+  .mobile-menu-cart a {
+    color: #24A19C;
+  }
+
+  .header-menu {
+    flex-direction: row-reverse;
+    margin-top: 30px;
+  }
+  
+  .header_menu_toggler_icon {
+    display: block;
+  }
+
+  .navigation {
+    position: absolute;
+    left: 0;
+    top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #24A19C;
+    padding: 10px 0;
+    transform: translateX(-100%);
+    transition: 0.7s ease-in-out;
+    border-radius: 5px;
+  }
+
+  .navigation li a {
+    color: #D9DBE1;
+  }
+
+  .navigation li:hover a {
+    color: #3A3A3A;
+  }
+
+  #header_menu_toggler:checked ~ .navigation {
+    transform: translateX(0);
+  }
+
+  /* Banner CSS */
+
+  .banner {
+    margin-top: 0;
+  }
+
+  h2 {
+    font-size: 36px;
+  }
+
+  .partners {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border: 0;
+    margin: 20px 0;
+  }
+
+  .partners-logo {
+    width: 22%;
+    padding: 10px 0;
+  }
+
+  /* Common CSS */
+  .banner,
+   .tool-cards,
+   .contact-area {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  /* Contact CSS */
+
+  .contact {
+    padding: 0 15px;
+  }
 }
 
 
